# xds-site

./: .dockerIgnore  .gitignore  Dockerfile  build_image.sh  queries.sql  xds-site.cabal
deploy/: Dockerfile
snaplets/heist/templates/: _flash.tpl  _navbar.tpl  base.tpl
snaplets/heist/templates/auth/: _login.tpl  form.tpl  login.tpl
snaplets/heist/templates/layout/: _navbar.tpl  base.tpl
snaplets/heist/templates/sources/: _list.tpl  _new.tpl  form.tpl  index.tpl  new.tpl  show.tpl
snaplets/heist/templates/users/: _new.tpl  form.tpl  new.tpl  registration-done.tpl
snaplets/postgresql-simple/: devel.cfg
snaplets/sass/: devel.cfg
snaplets/sass/css/: overrides.css  overrides.css.map  style.css
snaplets/sass/src/: overrides.scss  style.scss
src/: Application.hs  Bootstrap.hs  Flash.hs  Logger.hs  Main.hs  Mixpanel.hs  Site.hs  Types.hs  Utils.hs
src/Forms/: Login.hs  Source.hs  UserRegistration.hs  Validators.hs
src/Handlers/: Auth.hs  Source.hs  User.hs
src/Logger/: Types.hs
src/Store/: DDB.hs  Source.hs
src/Store/DDB/: Source.hs  Types.hs
src/Store/PG/: Source.hs  Types.hs  User.hs
src/Store/S3/: Source.hs
