Name:                xds-site
Version:             0.0.1.0
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          ababkin@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable xds-site
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    HTTP                      >=4000.2.20 && < 4000.3,
    MonadCatchIO-transformers >= 0.2.1    && < 0.4,
    aeson                     >= 0.9      && < 0.11,
    base                      >= 4.4      && < 5,
    bytestring                >= 0.9.1    && < 0.11,
    base64-bytestring         >= 1.0.0.1  && < 1.1,
    digestive-functors        >= 0.8.0.1  && < 0.9,
    digestive-functors-heist  >= 0.8.6.2  && < 0.9,
    digestive-functors-snap   >= 0.6.1.3  && < 0.7,
    email-validate            >= 2.1.3    && < 2.2,
    exceptions                >= 0.8.0.2  && < 0.9,
    heist                     >= 0.14     && < 0.15,
    http-client               >= 0.4.2.4  && < 0.5,
    lens                      >= 3.7.6    && < 4.13,
    mtl                       >= 2        && < 3,
    postgresql-simple         >= 0.5.0.1  && < 0.6,
    -- random                    >= 1.0.1.1 && < 1.1,
    snap                      >= 0.13     && < 0.15,
    snap-core                 >= 0.9      && < 0.10,
    snap-extras               >= 0.11.0.2 && < 0.12,
    snap-loader-static        >= 0.9      && < 0.10,
    snap-server               >= 0.9      && < 0.10,
    snaplet-postgresql-simple >= 0.6.0.4  && < 0.7,
    snaplet-sass              >= 0.1.2.0  && < 0.2,
    text                      >= 0.11     && < 1.3,
    time                      >= 1.1      && < 1.6,
    transformers              >= 0.4.3.0  && < 0.5,
    unordered-containers      >= 0.2.5.1  && < 0.3,
    uuid                      >= 1.3.11   && < 1.4,
    wreq                      >= 0.4      && < 0.5,
    xmlhtml                   >= 0.1      && < 0.3


  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    ghc-options: -static -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans -fno-warn-unused-do-bind -rtsopts "-with-rtsopts=-N"

