Name:                xds-site
Version:             0.0.1.0
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          ababkin@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable xds-site
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    HTTP                      >=4000.2.20 && < 4000.3,
    MonadCatchIO-transformers >= 0.3.1.3  && < 0.4,
    aws                       >= 0.13.0   && < 0.14,
    vector                    >= 0.10.9.1 && < 0.11,
    either-unwrap,
    old-locale                >= 1.0.0.6  && < 1.1,
    containers                >= 0.5.5.1  && < 0.6,
    aeson                     >= 0.10.0.0 && < 0.11,
    base                      >= 4.4      && < 5,
    bytestring                >= 0.10.6.0 && < 0.11,
    base64-bytestring         >= 1.0.0.1  && < 1.1,
    connection                >= 0.2.5    && < 0.3,
    digestive-functors        >= 0.8.0.1  && < 0.9,
    digestive-functors-heist  >= 0.8.6.2  && < 0.9,
    digestive-functors-snap   >= 0.6.1.3  && < 0.7,
    email-validate            >= 2.1.3    && < 2.2,
    exceptions                >= 0.8.0.2  && < 0.9,
    heist                     >= 0.14     && < 0.15,
    http-client               >= 0.4.24   && < 0.5,
    http-conduit              >= 2.1.8    && < 2.2,
    http-types                >= 0.9      && < 0.10,
    lens                      >= 4.13     && < 4.14,
    mtl                       >= 2        && < 3,
    postgresql-simple         >= 0.5.0.1  && < 0.6,
    -- random                    >= 1.0.1.1 && < 1.1,
    snap                      >= 0.14.0.6 && < 0.15,
    snap-core                 >= 0.9.8.0  && < 0.10,
    snap-extras               >= 0.11.0.2 && < 0.12,
    snap-loader-static        >= 0.9.0.2  && < 0.10,
    snap-server               >= 0.9.5.1  && < 0.10,
    snaplet-postgresql-simple >= 0.6.0.4  && < 0.7,
    snaplet-sass              >= 0.1.2.0  && < 0.2,
    text                      >= 1.2.1.3  && < 1.3,
    th-orphans >= 0.13.0 && < 0.14,
    haskell-src-meta >= 0.6.0.11 && < 0.7,
    time                      >= 1.5.0.1  && < 1.6,
    transformers              >= 0.4.3.0  && < 0.5,
    unix                      >= 2.7      && < 2.8,
    unordered-containers      >= 0.2.5.1  && < 0.3,
    uuid                      >= 1.3.11   && < 1.4,
    wreq                      >= 0.4      && < 0.5,
    xmlhtml                   >= 0.2.3.4  && < 0.3,
    xds-aws                   >= 0.3.1.0  && < 0.4



  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    -- ghc-options: -static -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O0
                 -fno-warn-orphans -fno-warn-unused-do-bind

